2004-03-04  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-line-manager-simple.c, cong-editor-node-element-span.c, cong-object.h

	Fixed warnings; this branch now compiles with -Wall -Werror

2004-03-04  Dave Malcolm  <david@davemalcolm.demon.co.uk>
